--- a/mlruns/.trash/810483466206726428/57bda540e4d54e42a3be9b344e0e2f75/meta.yaml
+++ b/mlruns/.trash/810483466206726428/57bda540e4d54e42a3be9b344e0e2f75/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: file:///D:/Users/Israel/Downloads/Maestria/Trimestre_5/MLOps/ProyectoML/Fase1Test/mlruns/810483466206726428/57bda540e4d54e42a3be9b344e0e2f75/artifacts
+deleted_time: 1728883448495
 end_time: 1728882983680
 entry_point_name: ''
 experiment_id: '810483466206726428'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 57bda540e4d54e42a3be9b344e0e2f75
 run_name: mysterious-whale-971
 run_uuid: 57bda540e4d54e42a3be9b344e0e2f75
