--- a/mlruns/.trash/810483466206726428/meta.yaml
+++ b/mlruns/.trash/810483466206726428/meta.yaml
@@ -1,6 +1,7 @@
 artifact_location: file:///D:/Users/Israel/Downloads/Maestria/Trimestre_5/MLOps/ProyectoML/Fase1Test/mlruns/810483466206726428
 creation_time: 1728882972174
 experiment_id: '810483466206726428'
-last_update_time: 1728882972174
-lifecycle_stage: active
+last_update_time: 1728883448495
+lifecycle_stage: deleted
 name: Predictive Maintenance Analysis V1
+tags: {}
